--- a/mini_project/.settings/org.eclipse.wst.common.component
+++ b/mini_project/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="mini_project">
+        
+    <wb-module deploy-name="mini_project0209">
+                
         <wb-resource deploy-path="/" source-path="/WebApp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="mini_project"/>
-        <property name="java-output-path" value="/mini_project/build/classes"/>
+                
+        <property name="java-output-path" value="/mini_project0209/build/classes"/>
+        <property name="context-root" value="mini_project0209"/>
+            
     </wb-module>
+    
 </project-modules>
